# file_path_from_id

./: Cargo.toml  README.md
examples/basic/: main.rs
src/: lib.rs  unix.rs  windows.rs  windows_test.rs
