[package]
name = "file_path_from_id"
version = "0.0.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-id = "0.2"
tracing = { version = "0.1", optional = true }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem"] }

[dev-dependencies]
notify = "8.0"
notify-debouncer-full = "0.5"
tempfile = "3.12.0"
test-log = { version = "0.2.16", features = ["trace"] }

[features]
default = []
tracing = ["dep:tracing"]
